added styling and progressing

--- a/Daniel_okyere_ShoppingCart_201105/index.html
+++ b/Daniel_okyere_ShoppingCart_201105/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel' Ecommerce website</title>
+    <link rel="stylesheet" href="styles.css">
     <script ></script>
 </head>
 <body>
-    <header>
+    <header class="main-header">
     <div>
-        <nav>
+        <nav class="main-nav nav">
             <ul>
-                <li><a href="#">Electronics</a></li>
+                <li class="nav"><a href="#">Electronics</a></li>
                 <li><a href="#">Groceries</a></li>
                 <li><a href="#">Hardware</a></li>
             </ul>
@@ -19,51 +20,51 @@
     </div>
     <h1>Products</h1>
     </header>
-    <section>
-        <h2>Television</h2>
-        <div>
+    <section class="">
+        <h2 class="section-header">Television</h2>
+        <div class="shop-item">
             <div>
                 <span>LG Flat Screen</span>
-                <img src="" alt="">
+                <img class="shop-item-image" src="/Daniel_okyere_ShoppingCart_201105/assets/images/lg1.jpg" alt="">
                 <div>
-                    <span>GhS 4000.00</span>
-                    <button>ADD TO CART</button>
+                    <span class="shop-item-price">GhS 4000.00</span>
+                    <button class="btn">ADD TO CART</button>
                 </div>
             </div>
         </div>
-        <div>
+        <div class="shop-item">
             <span>Samsung Flat Screen</span>
-            <img src="" alt="">
+            <img class="shop-item-image" src="/Daniel_okyere_ShoppingCart_201105/assets/images/samsung1.jpg" alt="">
             <div>
-                <span>Ghs 5000.00</span>
-                <button>ADD TO CART</button>
+                <span class="shop-item-price">Ghs 5000.00</span>
+                <button class="btn">ADD TO CART</button>
 
             </div>
         </div>
-        <div>
+        <div class="shop-item">
             <span>TOSHIBA 43" TELEVISION</span>
-            <img src="" alt="">
+            <img class="shop-item-image" src="/Daniel_okyere_ShoppingCart_201105/assets/images/Toshiba1.jpg" alt="">
             <div>
-                <span>Ghs 5000.00</span>
-                <button>ADD TO CART</button>
+                <span class="shop-item-price">Ghs 5000.00</span>
+                <button class="btn">ADD TO CART</button>
 
             </div>
         </div>
     
     </section>
     <section>
-        <h2>CART</h2>
+        <h2 class="section-header">CART</h2>
         <div>
-            <span>ITEM</span>
+            <span class="cart-item">ITEM</span>
             <span>PRICE</span>
             <span>QUANTITY</span>
         </div>
         <div></div>
-        <div>
+        <div class="cart-total">
             <strong>Total</strong>
             <span>Ghs0.00</span>
         </div>
-        <button>PURCHASE</button>
+        <button class="btn">PURCHASE</button>
     </section>
 </body>
 </html>
