--- a/Daniel_okyere_ShoppingCart_201105/index.html
+++ b/Daniel_okyere_ShoppingCart_201105/index.html
@@ -9,24 +9,24 @@
 </head>
 <body>
     <header class="main-header">
-    <div>
+  
         <nav class="main-nav nav">
             <ul>
-                <li class="nav"><a href="#">Electronics</a></li>
+                <li ><a href="#">Electronics</a></li>
                 <li><a href="#">Groceries</a></li>
                 <li><a href="#">Hardware</a></li>
             </ul>
         </nav>
-    </div>
-    <h1>Products</h1>
+    
+    <h1 class="product-status">Products</h1>
     </header>
     <section class="">
-        <h2 class="section-header">Television</h2>
+        <h2 class="section-header">Electronics</h2>
         <div class="shop-item">
             <div>
                 <span>LG Flat Screen</span>
                 <img class="shop-item-image" src="/Daniel_okyere_ShoppingCart_201105/assets/images/lg1.jpg" alt="">
-                <div>
+                <div class="shop-item-details">
                     <span class="shop-item-price">GhS 4000.00</span>
                     <button class="btn">ADD TO CART</button>
                 </div>
@@ -35,7 +35,7 @@
         <div class="shop-item">
             <span>Samsung Flat Screen</span>
             <img class="shop-item-image" src="/Daniel_okyere_ShoppingCart_201105/assets/images/samsung1.jpg" alt="">
-            <div>
+            <div class="shop-item-details">
                 <span class="shop-item-price">Ghs 5000.00</span>
                 <button class="btn">ADD TO CART</button>
 
@@ -44,7 +44,7 @@
         <div class="shop-item">
             <span>TOSHIBA 43" TELEVISION</span>
             <img class="shop-item-image" src="/Daniel_okyere_ShoppingCart_201105/assets/images/Toshiba1.jpg" alt="">
-            <div>
+            <div class="shop-item-details">
                 <span class="shop-item-price">Ghs 5000.00</span>
                 <button class="btn">ADD TO CART</button>
 
@@ -54,17 +54,17 @@
     </section>
     <section>
         <h2 class="section-header">CART</h2>
-        <div>
-            <span class="cart-item">ITEM</span>
-            <span>PRICE</span>
-            <span>QUANTITY</span>
+        <div class="cart-row">
+            <span class="cart-item cart-header">ITEM</span>
+            <span class="cart-price cart-header">PRICE</span>
+            <span class="cart-quantity cart-header">QUANTITY</span>
         </div>
         <div></div>
         <div class="cart-total">
             <strong>Total</strong>
             <span>Ghs0.00</span>
         </div>
-        <button class="btn">PURCHASE</button>
+        <button class="btn btn-purchase">PURCHASE</button>
     </section>
 </body>
 </html>
