working on the js

--- a/Daniel_okyere_ShoppingCart_201105/index.html
+++ b/Daniel_okyere_ShoppingCart_201105/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel' Ecommerce website</title>
     <link rel="stylesheet" href="styles.css">
-    <script ></script>
+    <script src="/Daniel_okyere_ShoppingCart_201105/assets/scripts/store.js"></script>
 </head>
 <body>
     <header class="main-header">
@@ -24,29 +24,29 @@
         <h2 class="section-header">Electronics</h2>
         <div class="shop-item">
             <div>
-                <span>LG Flat Screen</span>
+                <span class="shop-item-title">LG Flat Screen</span>
                 <img class="shop-item-image" src="/Daniel_okyere_ShoppingCart_201105/assets/images/lg1.jpg" alt="">
                 <div class="shop-item-details">
                     <span class="shop-item-price">GhS 4000.00</span>
-                    <button class="btn">ADD TO CART</button>
+                    <button class="btn  shop-item-button" type="button">ADD TO CART</button>
                 </div>
             </div>
         </div>
         <div class="shop-item">
-            <span>Samsung Flat Screen</span>
+            <span class="shop-item-title">Samsung Flat Screen</span>
             <img class="shop-item-image" src="/Daniel_okyere_ShoppingCart_201105/assets/images/samsung1.jpg" alt="">
             <div class="shop-item-details">
                 <span class="shop-item-price">Ghs 5000.00</span>
-                <button class="btn">ADD TO CART</button>
+                <button class="btn  shop-item-button" type="button">ADD TO CART</button>
 
             </div>
         </div>
         <div class="shop-item">
-            <span>TOSHIBA 43" TELEVISION</span>
+            <span class="shop-item-title">TOSHIBA 43" TELEVISION</span>
             <img class="shop-item-image" src="/Daniel_okyere_ShoppingCart_201105/assets/images/Toshiba1.jpg" alt="">
             <div class="shop-item-details">
                 <span class="shop-item-price">Ghs 5000.00</span>
-                <button class="btn">ADD TO CART</button>
+                <button class="btn  shop-item-button" type="button">ADD TO CART</button>
 
             </div>
         </div>
@@ -62,9 +62,9 @@
         <div></div>
         <div class="cart-total">
             <strong>Total</strong>
-            <span>Ghs0.00</span>
+            <span class="cart-total-price">Ghs0.00</span>
         </div>
-        <button class="btn btn-purchase">PURCHASE</button>
+        <button class="btn btn-purchase" type="button">PURCHASE</button>
     </section>
 </body>
 </html>
