making progress, can now add to cart but total is not a number

--- a/Daniel_okyere_ShoppingCart_201105/index.html
+++ b/Daniel_okyere_ShoppingCart_201105/index.html
@@ -22,7 +22,7 @@
     </header>
     <section class="">
         <h2 class="section-header">Electronics</h2>
-        <div class="shop-item">
+        <div class="cart-items">
             <div>
                 <span class="shop-item-title">LG Flat Screen</span>
                 <img class="shop-item-image" src="/Daniel_okyere_ShoppingCart_201105/assets/images/lg1.jpg" alt="">
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </div>
-        <div class="shop-item">
+        <div class="cart-items">
             <span class="shop-item-title">Samsung Flat Screen</span>
             <img class="shop-item-image" src="/Daniel_okyere_ShoppingCart_201105/assets/images/samsung1.jpg" alt="">
             <div class="shop-item-details">
@@ -41,7 +41,7 @@
 
             </div>
         </div>
-        <div class="shop-item">
+        <div class="cart-items">
             <span class="shop-item-title">TOSHIBA 43" TELEVISION</span>
             <img class="shop-item-image" src="/Daniel_okyere_ShoppingCart_201105/assets/images/Toshiba1.jpg" alt="">
             <div class="shop-item-details">
