--- a/Daniel_okyere_ShoppingCart_201105/index.html
+++ b/Daniel_okyere_ShoppingCart_201105/index.html
@@ -27,7 +27,7 @@
                 <span class="shop-item-title">LG Flat Screen</span>
                 <img class="shop-item-image" src="/Daniel_okyere_ShoppingCart_201105/assets/images/lg1.jpg" alt="">
                 <div class="shop-item-details">
-                    <span class="shop-item-price">GhS 4000.00</span>
+                    <span class="shop-item-price">4000.00</span>
                     <button class="btn  shop-item-button" type="button">ADD TO CART</button>
                 </div>
             </div>
@@ -36,7 +36,7 @@
             <span class="shop-item-title">Samsung Flat Screen</span>
             <img class="shop-item-image" src="/Daniel_okyere_ShoppingCart_201105/assets/images/samsung1.jpg" alt="">
             <div class="shop-item-details">
-                <span class="shop-item-price">Ghs 5000.00</span>
+                <span class="shop-item-price">5000.00</span>
                 <button class="btn  shop-item-button" type="button">ADD TO CART</button>
 
             </div>
@@ -45,7 +45,7 @@
             <span class="shop-item-title">TOSHIBA 43" TELEVISION</span>
             <img class="shop-item-image" src="/Daniel_okyere_ShoppingCart_201105/assets/images/Toshiba1.jpg" alt="">
             <div class="shop-item-details">
-                <span class="shop-item-price">Ghs 5000.00</span>
+                <span class="shop-item-price">5000.00</span>
                 <button class="btn  shop-item-button" type="button">ADD TO CART</button>
 
             </div>
